--- a/hand_posture/scripts/training/user_config.yaml
+++ b/hand_posture/scripts/training/user_config.yaml
@@ -12,10 +12,11 @@ train_parameters:
 
 dataset:
   name: ST_handposture_dataset
-  class_names: [None, Like, Dislike, FlatHand, Fist, Love, BreakTime, CrossHands]
-  training_path: datasets/ST_VL53L8CX_handposture_dataset
+  class_names:
+    [None, Like, Dislike, FlatHand, Fist, Love, BreakTime, CrossHands]
+  training_path: /tmp/inputs/dataset
   validation_path: #datasets/ST_VL53L8CX_handposture_test
-  test_path: 
+  test_path:
 
 pre_processing:
   Max_distance: 400
@@ -26,7 +27,7 @@ data_augmentation:
   RandomFlip: horizontal
 
 model:
-  model_type: {name : CNN2D_ST_HandPosture, version : v1}
+  model_type: { name: CNN2D_ST_HandPosture, version: v1 }
   input_shape: [8, 8, 2]
   dropout: 0.5
 
@@ -35,10 +36,10 @@ stm32ai:
   optimization: balanced
   footprints_on_target: STM32L4R9I-DISCO
   path_to_stm32ai: C:/Work/AI/Cube.AI/7.3.0/windows/stm32ai.exe
-  
+
 mlflow:
   uri: ./mlruns
 
 hydra:
   run:
-    dir: outputs/${now:%Y_%m_%d_%H_%M_%S}
+    dir: /tmp/outputs
