--- a/object_detection/scripts/deployment/user_config.yaml
+++ b/object_detection/scripts/deployment/user_config.yaml
@@ -24,6 +24,7 @@ model:
   model_type: {name : mobilenet, version : v1, alpha : 0.25}
   input_shape: [192, 192, 3]
   model_path: ../../models/ssd_mobilenetv1/ST_pretrainedmodel_public_dataset/COCO/ssd_mobilenet_v1_0.25_192/ssd_mobilenet_v1_025_192_int8.tflite
+  evaluate: False
 
 quantization:
   quantize: False
