--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ __pycache__
 
 # Development virtual environment
 venv.local
+
+# CubeIDE installation 
+st-stm32cubeide_1.14.0_19471_20231121_1200_amd64.deb_bundle.sh
