--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,4 @@ __pycache__
 venv.local
 
 # CubeIDE installation 
-st-stm32cubeide_1.14.0_19471_20231121_1200_amd64.deb_bundle.sh
+en.st-stm32cubeide_1.14.0_19471_20231121_1200_amd64.deb_bundle.sh.zip
