--- a/hand_posture/scripts/deployment/user_config.yaml
+++ b/hand_posture/scripts/deployment/user_config.yaml
@@ -16,6 +16,9 @@ model:
   model_type: {name : CNN2D_ST_HandPosture, version : v1}
   input_shape: [8, 8, 2]
   model_path: ../../models/CNN2D_ST_HandPosture/ST_pretrainedmodel_custom_dataset/ST_VL53L8CX_handposture_dataset/CNN2D_ST_HandPosture_8classes/CNN2D_ST_HandPosture_8classes.h5
+  
+  # Reply config extension
+  evaluate: False
 
 stm32ai:
   c_project_path: ../../getting_started
@@ -26,7 +29,7 @@ stm32ai:
   optimization: balanced
   footprints_on_target: STM32L4R9I-DISCO
   path_to_stm32ai: C:/Work/AI/Cube.AI/7.3.0/windows/stm32ai.exe
-  path_to_cubeIDE: C:/ST/STM32CubeIDE_1.7.0/STM32CubeIDE/stm32cubeide.exe
+  path_to_cubeIDE: /opt/st/stm32cubeide_1.14.0/stm32cubeide
 
 mlflow:
   uri: ./mlruns
